--- a/pages/Components/LandingPage.css
+++ b/pages/Components/LandingPage.css
@@ -6,10 +6,6 @@
   --color1Blur: rgba(250, 200, 200, 0.4);
   --color2: rgb(60, 10, 8);
   --color2Blur: rgba(60, 10, 8, 0.4);
-  scrollbar-width: none;
-}
-::-webkit-scrollbar {
-  display: none;
 }
 .title {
   font-size: 7vw;
@@ -60,7 +56,7 @@
     position: sticky; */
   backdrop-filter: blur(3px);
   border-radius: 10px;
-  top: 100px;
+  padding-top: 7vh;
   font-size: 7vw;
   color: var(--color2);
   margin: auto;
