Add navbar fixes

--- a/pages/Components/NavBar/NavBar.css
+++ b/pages/Components/NavBar/NavBar.css
@@ -26,7 +26,7 @@
 
 .headers{
     display: flex;
-    width: 35vw;
+    width: 40vw;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
@@ -57,10 +57,11 @@
     .logo{
         width: 7vh;
         height: 7vh;
+        display: none;
     }
     .headers{
         margin-left: 10vw;
-        width: 90vw;
+        width: 100vw;
     }
     .element{
         font-size: 1.8vh;
