--- a/pages/Components/NavBar/NavBar.css
+++ b/pages/Components/NavBar/NavBar.css
@@ -6,7 +6,7 @@
 
 .navbar{
     width: 100vw;
-    height: 100px;
+    height: 15vh;
     background-color: white;
     position: fixed;
     top:0;
@@ -25,6 +25,7 @@
 
 .headers{
     display: flex;
+    flex-wrap: wrap;
     /* width: 40vw; */
     flex-direction: row;
     align-items: center;
