--- a/pages/Components/NavBar/NavBar.css
+++ b/pages/Components/NavBar/NavBar.css
@@ -7,11 +7,11 @@
 .navbar{
     width: 100vw;
     height: 15vh;
-    background-color: white;
+    background-color: black;
     position: fixed;
     top:0;
     display: grid;
-    grid-template-columns: 2fr 3fr;
+    grid-template-columns: 1fr 5fr;
     grid-template-rows: 100px;
     box-shadow: 0px 0px 20px var(--color2Blur);
     z-index: 100;
@@ -33,7 +33,7 @@
 }
 
 .element{
-    color: var(--color2);
+    color: red;
     font-size: 1.8vw;
 }
 
@@ -68,6 +68,11 @@
     }
 }
 
+.logo2 {
+    width: 40px;
+    display: flex;
+    justify-content: center;
+}
 .instaLogo {
     width: 1px;
     height: 1px;
